mux-compiler/tests/snapshots/executable_integration__executable_integration__auto_nested_empty_list.snap
---
source: mux-compiler/tests/executable_integration.rs
assertion_line: 258
expression: normalized
---
error: 1 error found

error[E0308]: Cannot infer type for expression containing an empty collection literal
--> test_scripts/error_cases/auto_nested_empty_list.mux:4:14
   |
 4 |     auto x = {1: []}
   |              ^^^^^^^
   |
= help: Use explicit type annotations for all empty collection literals.
