mux-compiler/tests/snapshots/executable_integration__executable_integration__builtin_collection_methods.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
sort:     [1, 2, 3, 5, 8]
bsearch:  2
reverse:  [2, 1, 8, 3, 5]
index_of: 2
unique:   [1, 2, 3]
sum:      19
len:      5
contains: true
to_list:  [5, 3, 8, 1, 2]
copy:     [5, 3, 8, 1, 2, 99]
original: [5, 3, 8, 1, 2]
set len:  3
set max:  9
map len:  2
map pairs:[(a, 1), (b, 2)]
