mux-compiler/tests/snapshots/executable_integration__executable_integration__class_builtin_interfaces.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
true
false
true
true
true
false
true
false
9c
true
9c
