mux-compiler/tests/snapshots/executable_integration__executable_integration__class_hashable_keys.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
near
2
true
still near
2
2
true
false
true
true
