mux-compiler/tests/snapshots/executable_integration__executable_integration__class_member_error_recovery.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
error: 1 error found

error[E0201]: Expected expression, found newline
--> test_scripts/error_cases/class_member_error_recovery.mux:8:16
   |
 8 |         int y =
   |                ^
