mux-compiler/tests/snapshots/executable_integration__executable_integration__class_scalar_fields.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
0 0.0 false
[] 10
42 1.5 true
A sample
42 7
sample other
49
160.5
[49, 7]
true
