mux-compiler/tests/snapshots/executable_integration__executable_integration__closure_capture_in_match.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
ok arm sees: captured 8
after writer: err negative
bound in arm: 6
outer value intact: outer
tagged: at limit
tagged: 3
nested sees: deep 4
