mux-compiler/tests/snapshots/executable_integration__executable_integration__closure_capture_sharing.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
block inner: 1
block inner: 2
block after: 2
param inner: 1
param inner: 2
param after: 2
loop inner: 11
loop after: 11
global inner: 1
global inner: 2
global after: 2
shared inc: 1
shared inc: 2
shared dec: 1
shared after: 1
add5(3): 8
add10(3): 13
string inner: start!
string inner: start!!
string after: start!!
